Closed Bug 340363 Opened 18 years ago Closed 18 years ago

HashMgr::load_tables leaks "rawdict" for various failures, and sometimes even a tableptr

Categories

(Core :: Spelling checker, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity, memory-leak)

Attachments

(1 file)

 
Summary: HashMgr::load_tables leaks "rawdict" for various failures, and a sometimes even a tableptr → HashMgr::load_tables leaks "rawdict" for various failures, and sometimes even a tableptr
Assignee: mscott → timeless
Status: NEW → ASSIGNED
Attachment #238883 - Flags: review?(mscott)
Attachment #238883 - Flags: review?(mscott) → review+
Attachment #238883 - Flags: superreview?(neil)
Attachment #238883 - Flags: superreview?(neil) → superreview+
If it's in myspell code, should the change be sent upstream too?
Fix was checked in some time ago --> RESOLVED FIXED
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: