Bug 340363 HashMgr::load_tables leaks "rawdict" for various failures, and sometimes even a tableptr r=mscott sr=neil